err/dm.zodb.asynchronous.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/dm'...
Listing './lib/python3.5/site-packages/dm/transaction'...
Listing './lib/python3.5/site-packages/dm/transaction/aborthook'...
Listing './lib/python3.5/site-packages/dm/zodb'...
Listing './lib/python3.5/site-packages/dm/zodb/asynchronous'...
Compiling './lib/python3.5/site-packages/dm/zodb/asynchronous/context.py'...
***   File "./lib/python3.5/site-packages/dm/zodb/asynchronous/context.py", line 154
    def __resolve(self, (db_name, oid)):
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dm/zodb/asynchronous/scheduler.py'...
***   File "./lib/python3.5/site-packages/dm/zodb/asynchronous/scheduler.py", line 119
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dm/zodb/asynchronous/uuidbp.py'...
***   File "./lib/python3.5/site-packages/dm/zodb/asynchronous/uuidbp.py", line 36
    if not 0 <= time_low < 1<<32L:
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dm.transaction.aborthook-1.0.egg-info'...
Listing './lib/python3.5/site-packages/dm.zodb.asynchronous-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
